Fix Build files

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,6 +16,11 @@ ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/VoxelDemo/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
 
+[/Script/BuildSettings.BuildSettings]
+DefaultGameTarget=VoxelAssetDemo
+DefaultEditorTarget=VoxelAssetDemoEditor
+
+
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
 r.GenerateMeshDistanceFields=True
@@ -67,8 +72,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 NearClipPlane=5.000000
 
-+ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/VoxelAssetDemo_1_0")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/VoxelAssetDemo_1_0")
+
 
 [/Script/AIModule.AISystem]
 bForgetStaleActors=True
