--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=E1FCFDCB4C405F8EFB62A89F74A7B749
-ProjectName=First Person BP Game Template
+ProjectName=Voxel Asset Demo
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "CEB1FD044FB089BADE133FA63D11980B", "Voxel Demo")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "44686BFA4E879AC5E93A6382E7AD2031", "Voxel Demo")
+
